--- a/package.json
+++ b/package.json
@@ -34,7 +34,25 @@
       ]
    },
    "devDependencies": {
+      "@babel/core": "^7.11.1",
+      "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+      "@babel/preset-react": "^7.10.4",
+      "babel-core": "^6.26.3",
+      "babel-jest": "^26.2.2",
       "cypress": "^4.12.1",
+      "enzyme": "^3.11.0",
+      "enzyme-adapter-react-16": "^1.15.3",
+      "eslint": "^7.6.0",
+      "eslint-config-codingitwrong": "^0.1.4",
       "jest": "^26.2.2"
+   },
+   "jest": {
+      "setupFilesAfterEnv": [
+         "<rootDir>test/setup.js"
+      ],
+      "moduleDirectories": [
+         "node_modules",
+         "src"
+      ]
    }
 }
