--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
    "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
-      "test": "react-scripts test",
-      "unit": "jest test/**/*.spec.js",
       "eject": "react-scripts eject",
-      "e2e": "cypress open"
+      "e2e": "cypress open",
+      "lint": "eslint src/**/*.js test/**/*.js cypress/integration/**/*.js",
+      "unit": "jest test/**/*.spec.js",
+      "test": "react-scripts test"
    },
    "eslintConfig": {
       "extends": "react-app"
@@ -38,12 +39,16 @@
       "@babel/plugin-syntax-dynamic-import": "^7.8.3",
       "@babel/preset-react": "^7.10.4",
       "babel-core": "^6.26.3",
+      "babel-eslint": "^10.1.0",
       "babel-jest": "^26.2.2",
       "cypress": "^4.12.1",
       "enzyme": "^3.11.0",
       "enzyme-adapter-react-16": "^1.15.3",
       "eslint": "^7.6.0",
       "eslint-config-codingitwrong": "^0.1.4",
+      "eslint-plugin-cypress": "^2.11.1",
+      "eslint-plugin-jest": "^23.20.0",
+      "eslint-plugin-react": "^7.20.5",
       "jest": "^26.2.2"
    },
    "jest": {
