--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "eject": "react-scripts eject",
       "e2e": "cypress open",
       "lint": "eslint src/**/*.js test/**/*.js cypress/integration/**/*.js",
-      "unit": "jest test/**/*.spec.js",
+      "unit": "jest test/**/*.js test/**/**/*.js",
       "test": "react-scripts test"
    },
    "eslintConfig": {
@@ -40,16 +40,16 @@
       "@babel/preset-react": "^7.10.4",
       "babel-core": "^6.26.3",
       "babel-eslint": "^10.1.0",
-      "babel-jest": "^26.2.2",
+      "babel-jest": "^24.9.0",
       "cypress": "^4.12.1",
       "enzyme": "^3.11.0",
       "enzyme-adapter-react-16": "^1.15.3",
-      "eslint": "^7.6.0",
+      "eslint": "^6.6.0",
       "eslint-config-codingitwrong": "^0.1.4",
       "eslint-plugin-cypress": "^2.11.1",
       "eslint-plugin-jest": "^23.20.0",
       "eslint-plugin-react": "^7.20.5",
-      "jest": "^26.2.2"
+      "jest": "^24.9.0"
    },
    "jest": {
       "setupFilesAfterEnv": [
