--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,5 +24,5 @@ jobs:
             - ~/.npm
             - ~/.cache
       - run: npm i -g wait-on
-      - run: npm start & wait-on http://localhost:3000
+      - run: npm start & wait-on http://localhost:3000/
       - run: $(npm bin)/cypress run 
